turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: illegal start of simple pattern
var rule:Array[Array[Array[Int]]] = T
^Turmite:16: error: '=' expected but ';' found.
var nbSteps:Int = 8342;
^